// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 13,
          "fontWeight": "normal",
          "textAlign": "left",
        },
        Object {
          "color": "#FFF",
        },
      ]
    }
  >
    +1
  </Text>
</View>
`;

exports[`renders colored badge 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      },
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 13,
          "fontWeight": "normal",
          "textAlign": "left",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    +1
  </Text>
</View>
`;

exports[`renders icon badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      },
      Object {
        "backgroundColor": "#486c86",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontSize": 15,
        },
        undefined,
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`renders icon badge 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      },
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#486c86",
          "fontSize": 15,
        },
        undefined,
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`renders regular badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      },
      Object {
        "backgroundColor": "#486c86",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 13,
          "fontWeight": "normal",
          "textAlign": "left",
        },
        Object {
          "color": "#FFF",
        },
      ]
    }
  >
    +1
  </Text>
</View>
`;

exports[`renders regular badge 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      },
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 13,
          "fontWeight": "normal",
          "textAlign": "left",
        },
        Object {
          "color": "#486c86",
        },
      ]
    }
  >
    +1
  </Text>
</View>
`;
